--- a/main.css
+++ b/main.css
@@ -13,3 +13,11 @@
     font-family: sans-serif;
     text-align: center;
 }
+.footer{
+    background: rgb(85, 151, 212);
+    padding: 30px 100px;
+    font-size: 32px;
+    color: #fff;
+    font-family: sans-serif;
+    text-align: center;
+}
